Fixed visual bug on footer with overflow property

--- a/style.css
+++ b/style.css
@@ -224,4 +224,5 @@ ul {
     height: 80px;
     text-align: center;
     line-height: 90px;
+    overflow: auto;
 }
